[gd_scene load_steps=10 format=3 uid="uid://drvs1ma7n2pds"]

[ext_resource type="Theme" uid="uid://t514axf8osny" path="res://assets/options_panel.theme" id="1_afndc"]
[ext_resource type="Script" path="res://scripts/options_panel.gd" id="1_jr64y"]
[ext_resource type="Theme" uid="uid://davygdbtpqtiu" path="res://assets/emoji_buttons.theme" id="3_54pgb"]
[ext_resource type="Theme" uid="uid://d0246ma4yn1cx" path="res://assets/amount_changer.theme" id="4_3c057"]
[ext_resource type="Theme" uid="uid://bvqi7rml405oc" path="res://assets/popup_menu.theme" id="4_l26ar"]
[ext_resource type="Theme" uid="uid://c3tw33cv4yrxj" path="res://assets/misc_buttons.theme" id="5_yj6vi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oup4b"]
bg_color = Color(0.180392, 0.180392, 0.180392, 0.882353)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxLine" id="StyleBoxLine_rxvp1"]
color = Color(0.862745, 0.862745, 0.862745, 1)
thickness = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k3ege"]
bg_color = Color(0.196078, 0.196078, 0.196078, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="OptionsPanel" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -245.0
offset_top = -201.5
offset_right = 245.0
offset_bottom = 201.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_afndc")
theme_override_styles/panel = SubResource("StyleBoxFlat_oup4b")
script = ExtResource("1_jr64y")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="MainVBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleVBox" type="VBoxContainer" parent="Margin/MainVBox"]
layout_mode = 2

[node name="Title" type="Label" parent="Margin/MainVBox/TitleVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Options"
horizontal_alignment = 1

[node name="Underline" type="HSeparator" parent="Margin/MainVBox/TitleVBox"]
layout_mode = 2
theme_override_constants/separation = 12
theme_override_styles/separator = SubResource("StyleBoxLine_rxvp1")

[node name="EmojiHBox" type="HBoxContainer" parent="Margin/MainVBox"]
layout_mode = 2
theme = ExtResource("3_54pgb")
theme_override_constants/separation = 6

[node name="Label" type="Label" parent="Margin/MainVBox/EmojiHBox"]
layout_mode = 2
text = "Selected: "

[node name="Rock" type="Button" parent="Margin/MainVBox/EmojiHBox"]
layout_mode = 2
toggle_mode = true
text = "ü™®"

[node name="Paper" type="Button" parent="Margin/MainVBox/EmojiHBox"]
layout_mode = 2
toggle_mode = true
text = "üìÑ"

[node name="Scissors" type="Button" parent="Margin/MainVBox/EmojiHBox"]
layout_mode = 2
toggle_mode = true
text = "‚úÇÔ∏è"

[node name="Random" type="Button" parent="Margin/MainVBox/EmojiHBox"]
layout_mode = 2
theme_override_constants/outline_size = 0
toggle_mode = true
button_pressed = true
text = "üé≤"

[node name="ColorOptions" type="OptionButton" parent="Margin/MainVBox"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_l26ar")
theme_override_font_sizes/font_size = 32
item_count = 3
selected = 0
popup/item_0/text = "Light"
popup/item_0/id = 0
popup/item_1/text = "Dark"
popup/item_1/id = 1
popup/item_2/text = "Colorful"
popup/item_2/id = 2

[node name="CollisionHBox" type="HBoxContainer" parent="Margin/MainVBox"]
layout_mode = 2
tooltip_text = "This Enables/Disables the Collision, Collision can cause weird physics bugs when placing units so it's disabled by default

Changing this settings does restart the game"
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="Margin/MainVBox/CollisionHBox"]
layout_mode = 2
size_flags_horizontal = 0
text = "Collision:"

[node name="CollisionButton" type="Button" parent="Margin/MainVBox/CollisionHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Disabled"

[node name="MiscHbox" type="HBoxContainer" parent="Margin/MainVBox"]
layout_mode = 2
theme = ExtResource("5_yj6vi")
theme_override_constants/separation = 20
alignment = 1

[node name="Restart" type="Button" parent="Margin/MainVBox/MiscHbox"]
layout_mode = 2
tooltip_text = "Restart"
text = "üîÑ"

[node name="Clear" type="Button" parent="Margin/MainVBox/MiscHbox"]
layout_mode = 2
tooltip_text = "Clear"
text = "üå™Ô∏è"

[node name="Controls" type="Button" parent="Margin/MainVBox/MiscHbox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
tooltip_text = "Show Controls"
text = "üïπÔ∏è"

[node name="Amount" type="Button" parent="Margin/MainVBox/MiscHbox"]
layout_mode = 2
text = "üéöÔ∏è"

[node name="ControlsPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_k3ege")

[node name="Margin" type="MarginContainer" parent="ControlsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 10

[node name="ControlsVBox" type="VBoxContainer" parent="ControlsPanel/Margin"]
layout_mode = 2

[node name="Text" type="RichTextLabel" parent="ControlsPanel/Margin/ControlsVBox"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_separation = -4
theme_override_constants/outline_size = 12
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center][font_size=30]Controls:[/font_size][/center]

[ul]
Left Click  to place a Unit
Right Click  to place a Group of Units
R  to restart
C  to clear the screen
M to Toggle Mute :)
[/ul]

"
fit_content = true

[node name="ControlsClose" type="Button" parent="ControlsPanel/Margin/ControlsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 28
text = "Close "

[node name="AmountChangerPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_k3ege")

[node name="Margin" type="MarginContainer" parent="AmountChangerPanel"]
layout_mode = 2
theme_override_constants/margin_left = 18
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 18
theme_override_constants/margin_bottom = 10

[node name="AmountVBox" type="VBoxContainer" parent="AmountChangerPanel/Margin"]
custom_minimum_size = Vector2(380, 0)
layout_mode = 2
theme = ExtResource("4_3c057")

[node name="SpeedHBox" type="HBoxContainer" parent="AmountChangerPanel/Margin/AmountVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="AmountChangerPanel/Margin/AmountVBox/SpeedHBox"]
layout_mode = 2
text = "Unit Speed:"

[node name="SpeedSpinBox" type="SpinBox" parent="AmountChangerPanel/Margin/AmountVBox/SpeedHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
min_value = 10.0
max_value = 200.0
value = 10.0
rounded = true
alignment = 1

[node name="StartHBox" type="HBoxContainer" parent="AmountChangerPanel/Margin/AmountVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="AmountChangerPanel/Margin/AmountVBox/StartHBox"]
layout_mode = 2
size_flags_horizontal = 0
text = "Starting Amount:"
horizontal_alignment = 1

[node name="StartSpinBox" type="SpinBox" parent="AmountChangerPanel/Margin/AmountVBox/StartHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
max_value = 200.0
value = 1.0
rounded = true
alignment = 1

[node name="GroupHBox" type="HBoxContainer" parent="AmountChangerPanel/Margin/AmountVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="AmountChangerPanel/Margin/AmountVBox/GroupHBox"]
layout_mode = 2
text = "Group Amount:"
horizontal_alignment = 1

[node name="GroupSpinBox" type="SpinBox" parent="AmountChangerPanel/Margin/AmountVBox/GroupHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
min_value = 2.0
max_value = 20.0
value = 2.0
rounded = true
alignment = 1

[node name="AmountClose" type="Button" parent="AmountChangerPanel/Margin/AmountVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 28
text = "Close "

[connection signal="item_selected" from="Margin/MainVBox/ColorOptions" to="." method="_on_color_options_item_selected"]
[connection signal="pressed" from="Margin/MainVBox/CollisionHBox/CollisionButton" to="." method="_on_collision_button_pressed"]
[connection signal="pressed" from="Margin/MainVBox/MiscHbox/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Margin/MainVBox/MiscHbox/Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Margin/MainVBox/MiscHbox/Controls" to="." method="_toggle_controls_panel"]
[connection signal="pressed" from="Margin/MainVBox/MiscHbox/Amount" to="." method="_toggle_amount_changer_panel"]
[connection signal="pressed" from="ControlsPanel/Margin/ControlsVBox/ControlsClose" to="." method="_toggle_controls_panel"]
[connection signal="value_changed" from="AmountChangerPanel/Margin/AmountVBox/SpeedHBox/SpeedSpinBox" to="." method="_on_speed_spin_box_value_changed"]
[connection signal="value_changed" from="AmountChangerPanel/Margin/AmountVBox/StartHBox/StartSpinBox" to="." method="_on_start_spin_box_value_changed"]
[connection signal="value_changed" from="AmountChangerPanel/Margin/AmountVBox/GroupHBox/GroupSpinBox" to="." method="_on_group_spin_box_value_changed"]
[connection signal="pressed" from="AmountChangerPanel/Margin/AmountVBox/AmountClose" to="." method="_toggle_amount_changer_panel"]
